--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
-flask
-flask_sqlalchemy
-flask_wtf
-flask_login
-wtforms
-python-dotenv
-requests
-oracledb
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+cryptography==38.0.4
+Flask==2.2.2
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.0.1
+greenlet==2.0.1
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+oracledb==1.2.1
+pycparser==2.21
+python-dotenv==0.21.0
+requests==2.28.1
+SQLAlchemy==2.0.0b4
+typing_extensions==4.4.0
+urllib3==1.26.13
+Werkzeug==2.2.2
+WTForms==3.0.1
