--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-oracledb==1.2.1
 pycparser==2.21
 python-dotenv==0.21.0
 requests==2.28.1
@@ -21,3 +20,4 @@ typing_extensions==4.4.0
 urllib3==1.26.13
 Werkzeug==2.2.2
 WTForms[email]==3.0.1
+psycopg2
