--- a/requirements.txt
+++ b/requirements.txt
@@ -3,22 +3,24 @@ cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 cryptography==38.0.4
+dnspython==2.3.0
+email-validator==1.3.1
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
 greenlet==2.0.1
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+psycopg2-binary==2.9.5
 pycparser==2.21
 python-dotenv==0.21.0
 requests==2.28.1
-SQLAlchemy==2.0.0b4
+SQLAlchemy==2.0.3
 typing_extensions==4.4.0
 urllib3==1.26.13
 Werkzeug==2.2.2
-WTForms[email]==3.0.1
-psycopg2-binary
-gunicorn
+WTForms==3.0.1
